# kubernetes-bootstrap

./: .gitignore  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  audit_report.md  golden_ami_review.md  justfile  k8s_bootstrap_integration.md  package.json  pyproject.toml
.github/: actionlint.yaml
.github/workflows/: _deploy-kubernetes.yml  _deploy-ssm-automation.yml  _deploy-stack.yml  _post-bootstrap-config.yml  build-ci-image.yml  ci.yml  day-1-orchestration.yml  deploy-cdk.yml  deploy-full.yml  deploy-golden-ami.yml  deploy-kubernetes.yml  deploy-post-bootstrap.yml  deploy-ssm-automation.yml  gitops-k8s.yml  manage-admin-api.yml  promote-to-main.yml  validate-manifests.yml
argocd-apps/: admin-api-secrets.yaml  admin-api.yaml  applications-production.yaml  arc-config.yaml  arc-controller.yaml  arc-runners-tucaken.yaml  arc-runners.yaml  argo-rollouts.yaml  argocd-image-updater.yaml  argocd-ingress.yaml  argocd-notifications.yaml  article-pipeline-secrets.yaml  article-pipeline.yaml  aws-cloud-controller-manager.yaml  aws-ebs-csi-driver.yaml  aws-node-termination-handler.yaml  cert-manager-config.yaml  cert-manager.yaml  cluster-autoscaler.yaml  crossplane-providers.yaml  crossplane-xrds.yaml  crossplane.yaml  descheduler.yaml  ecr-token-refresh.yaml  external-secrets-config.yaml  external-secrets.yaml  headlamp.yaml  ingestion-secrets.yaml  ingestion.yaml  job-strategist-secrets.yaml  job-strategist.yaml  metrics-server.yaml  monitoring-production.yaml  monitoring-secrets.yaml  monitoring.yaml  nextjs-secrets.yaml  nextjs.yaml  opencost.yaml  platform-job-watcher.yaml  platform-rds-production.yaml  (+15 more)
argocd-apps/eks/: README.md  root-app-development.yaml
boot/: README.md  boot-k8s.sh  boot-worker.sh  verify-cluster.sh
boot/steps/: 01_validate_ami.py  01a_associate_eip.py  02_init_kubeadm.py  __init__.py  (+16 more)
docs/: boot-cp-steps-review.md
infra/: cdk.context.json  cdk.json  check-yaml-len.ts  eslint.config.mjs  package.json  tsconfig.json
logs/: .gitignore
scripts/: ami-build-logs.ts  argocd-bust-cache.sh  fetch-boot-logs.ts  gh-secrets.ts  loki-secrets.example.yaml  package.json  patch-database-dashboard.py  purge-old-amis.ts  ssm-deploy.ts  test-ami-build.ts  troubleshoot-ami.ts  tsconfig.build.json  tsconfig.json  validate-manifests.py
system/: README.md  calico-pdbs.yaml  priority-classes.yaml
tests/: conftest.py
(+668 files in other folders)
