[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-bootstrap"
version = "0.1.0"
description = "Kubernetes bootstrap scripts for control plane and ArgoCD setup"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "boto3>=1.34",
    "kubernetes>=28.0",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pyyaml>=6.0",
    "ruff>=0.8",
]

# ---------------------------------------------------------------------------
# Setuptools — package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = [
    "boot*",
    "deploy_helpers*",
    "system*",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
    "system/argocd",
    "system/cert-manager",
    "boot",
    "boot/steps",
]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Ruff — linting + formatting (replaces flake8, isort, black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["boot", "deploy_helpers", "system/argocd", "system/cert-manager", "system/dr", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg — common in argparse
    "RUF001", # ambiguous unicode — intentional UI chars (ℹ, →, ✓, ⚠)
    "RUF002", # ambiguous unicode in docstrings — en dashes are intentional
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.isort]
known-first-party = ["helpers", "boot_helpers", "deploy_helpers", "steps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
